NF: Support for multi-user advertisers, & overflow CSS fix

--- a/public/less/angle/app/layout.less
+++ b/public/less/angle/app/layout.less
@@ -129,7 +129,7 @@ html, body {
   // styling to visually wrap the component
   border-top: 1px solid rgba(0,0,0,.15);
   margin-top: -1px;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: auto;
 
   > .unwrap {
